added javadoc comments adjusted adapt template console command fields visibility